// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rdme changelog upload > given that ReadMe project has bidirection sync set up > should error if validation is not skipped 1`] = `
{
  "error": [Error: Bi-directional syncing is enabled for this project. Uploading these docs will overwrite what's currently synced from Git. To proceed with the upload, re-run this command with the \`--skip-validation\` flag.],
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
",
  "stdout": "",
}
`;

exports[`rdme changelog upload > given that ReadMe project has bidirection sync set up > should handle an error if /projects/me returns an error 1`] = `
{
  "error": [APIv2Error: ReadMe API error: The API key couldn't be located.

The API key you passed in (bad-api-key) doesn't match any keys we have in our system. API keys must be passed in via Bearer token. You can get your API key in Configuration > API Key, or in the docs.],
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
",
  "stdout": "",
}
`;

exports[`rdme changelog upload > given that ReadMe project has bidirection sync set up > should upload if validation is skipped 1`] = `
{
  "result": {
    "created": [
      {
        "filePath": "__tests__/__fixtures__/changelog/mixed-docs/invalid-attributes.md",
        "response": {},
        "result": "created",
        "slug": "invalid-attributes",
      },
    ],
    "failed": [],
    "skipped": [],
    "updated": [],
  },
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
 ›   Warning: Bi-directional syncing is enabled for this project. Uploading 
 ›   these docs will overwrite what's currently synced from Git.
- 🚀 Uploading files to ReadMe...
✔ 🚀 Uploading files to ReadMe... done!
",
  "stdout": "🌱 Successfully created 1 page(s) in ReadMe:
   - invalid-attributes (__tests__/__fixtures__/changelog/mixed-docs/invalid-attributes.md)
",
}
`;

exports[`rdme changelog upload > given that the file path is a directory > should create a page in ReadMe for each file in the directory and its subdirectories 1`] = `
{
  "result": {
    "created": [
      {
        "filePath": "__tests__/__fixtures__/changelog/existing-docs/simple-doc.md",
        "response": {},
        "result": "created",
        "slug": "simple-doc",
      },
      {
        "filePath": "__tests__/__fixtures__/changelog/existing-docs/subdir/another-doc.md",
        "response": {},
        "result": "created",
        "slug": "another-doc",
      },
    ],
    "failed": [],
    "skipped": [],
    "updated": [],
  },
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
- 🔍 Looking for Markdown files in the \`__tests__/__fixtures__/changelog/existing-docs\` directory...
✔ 🔍 Looking for Markdown files in the \`__tests__/__fixtures__/changelog/existing-docs\` directory... 2 file(s) found!
- 🔬 Validating frontmatter data...
✔ 🔬 Validating frontmatter data... no issues found!
- 🚀 Uploading files to ReadMe...
✔ 🚀 Uploading files to ReadMe... done!
",
  "stdout": "🌱 Successfully created 2 page(s) in ReadMe:
   - simple-doc (__tests__/__fixtures__/changelog/existing-docs/simple-doc.md)
   - another-doc (__tests__/__fixtures__/changelog/existing-docs/subdir/another-doc.md)
",
}
`;

exports[`rdme changelog upload > given that the file path is a directory > should error out if the directory does not contain any Markdown files 1`] = `
{
  "error": [Error: The directory you provided (__tests__/__fixtures__/ref-oas) doesn't contain any of the following file extensions: .markdown, .md, .mdx.],
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
- 🔍 Looking for Markdown files in the \`__tests__/__fixtures__/ref-oas\` directory...
✖ 🔍 Looking for Markdown files in the \`__tests__/__fixtures__/ref-oas\` directory... no files found.
",
  "stdout": "",
}
`;

exports[`rdme changelog upload > given that the file path is a directory > should handle a mix of creates and updates and failures and skipped files (dry run) 1`] = `
{
  "error": [AggregateError: Multiple dry runs failed. To see more detailed errors for a page, run \`rdme changelog upload <path-to-page.md>\` --dry-run.],
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
- 🔍 Looking for Markdown files in the \`__tests__/__fixtures__/changelog/mixed-docs\` directory...
✔ 🔍 Looking for Markdown files in the \`__tests__/__fixtures__/changelog/mixed-docs\` directory... 5 file(s) found!
 ›   Warning: Skipping pre-upload validation of the Markdown file(s). This is 
 ›   not recommended.
- 🎭 Uploading files to ReadMe (but not really because it's a dry run)...
✖ 🎭 Uploading files to ReadMe (but not really because it's a dry run)... 2 file(s) failed.
",
  "stdout": "🌱 The following 1 page(s) do not currently exist in ReadMe and will be created:
   - invalid-attributes (__tests__/__fixtures__/changelog/mixed-docs/invalid-attributes.md)
🔄 The following 1 page(s) already exist in ReadMe and will be updated:
   - legacy-flag (__tests__/__fixtures__/changelog/mixed-docs/legacy-flag.md)
⏭️ The following 1 page(s) will be skipped due to no frontmatter data:
   - doc-sans-attributes (__tests__/__fixtures__/changelog/mixed-docs/doc-sans-attributes.md)
🚨 Unable to fetch data about the following 2 page(s):
   - __tests__/__fixtures__/changelog/mixed-docs/new-doc-slug.mdx: The ReadMe API responded with an unexpected error. Please try again and if this issue persists, get in touch with us at support@readme.io.
   - __tests__/__fixtures__/changelog/mixed-docs/simple-doc.md: The ReadMe API responded with an unexpected error. Please try again and if this issue persists, get in touch with us at support@readme.io.
",
}
`;

exports[`rdme changelog upload > given that the file path is a directory > should handle a mix of creates and updates and failures and skipped files 1`] = `
{
  "error": [AggregateError: Multiple page uploads failed. To see more detailed errors for a page, run \`rdme changelog upload <path-to-page.md>\`.],
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
- 🔍 Looking for Markdown files in the \`__tests__/__fixtures__/changelog/mixed-docs\` directory...
✔ 🔍 Looking for Markdown files in the \`__tests__/__fixtures__/changelog/mixed-docs\` directory... 5 file(s) found!
 ›   Warning: Skipping pre-upload validation of the Markdown file(s). This is 
 ›   not recommended.
- 🚀 Uploading files to ReadMe...
✖ 🚀 Uploading files to ReadMe... 2 file(s) failed.
",
  "stdout": "🌱 Successfully created 1 page(s) in ReadMe:
   - invalid-attributes (__tests__/__fixtures__/changelog/mixed-docs/invalid-attributes.md)
🔄 Successfully updated 1 page(s) in ReadMe:
   - legacy-flag (__tests__/__fixtures__/changelog/mixed-docs/legacy-flag.md)
⏭️ Skipped 1 page(s) in ReadMe due to no frontmatter data:
   - doc-sans-attributes (__tests__/__fixtures__/changelog/mixed-docs/doc-sans-attributes.md)
🚨 Received errors when attempting to upload 2 page(s):
   - __tests__/__fixtures__/changelog/mixed-docs/new-doc-slug.mdx: The ReadMe API responded with an unexpected error. Please try again and if this issue persists, get in touch with us at support@readme.io.
   - __tests__/__fixtures__/changelog/mixed-docs/simple-doc.md: The ReadMe API responded with an unexpected error. Please try again and if this issue persists, get in touch with us at support@readme.io.
",
}
`;

exports[`rdme changelog upload > given that the file path is a directory > should handle a mix of creates and updates and failures and skipped files and not error out with \`max-errors\` flag 1`] = `
{
  "result": {
    "created": [
      {
        "filePath": "__tests__/__fixtures__/changelog/mixed-docs/invalid-attributes.md",
        "response": {},
        "result": "created",
        "slug": "invalid-attributes",
      },
    ],
    "failed": [
      {
        "error": [APIv2Error: The ReadMe API responded with an unexpected error. Please try again and if this issue persists, get in touch with us at support@readme.io.],
        "filePath": "__tests__/__fixtures__/changelog/mixed-docs/new-doc-slug.mdx",
        "result": "failed",
        "slug": "some-slug",
      },
      {
        "error": [APIv2Error: The ReadMe API responded with an unexpected error. Please try again and if this issue persists, get in touch with us at support@readme.io.],
        "filePath": "__tests__/__fixtures__/changelog/mixed-docs/simple-doc.md",
        "result": "failed",
        "slug": "simple-doc",
      },
    ],
    "skipped": [
      {
        "filePath": "__tests__/__fixtures__/changelog/mixed-docs/doc-sans-attributes.md",
        "result": "skipped",
        "slug": "doc-sans-attributes",
      },
    ],
    "updated": [
      {
        "filePath": "__tests__/__fixtures__/changelog/mixed-docs/legacy-flag.md",
        "response": {},
        "result": "updated",
        "slug": "legacy-flag",
      },
    ],
  },
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
- 🔍 Looking for Markdown files in the \`__tests__/__fixtures__/changelog/mixed-docs\` directory...
✔ 🔍 Looking for Markdown files in the \`__tests__/__fixtures__/changelog/mixed-docs\` directory... 5 file(s) found!
 ›   Warning: Skipping pre-upload validation of the Markdown file(s). This is 
 ›   not recommended.
- 🚀 Uploading files to ReadMe...
✖ 🚀 Uploading files to ReadMe... 2 file(s) failed.
",
  "stdout": "🌱 Successfully created 1 page(s) in ReadMe:
   - invalid-attributes (__tests__/__fixtures__/changelog/mixed-docs/invalid-attributes.md)
🔄 Successfully updated 1 page(s) in ReadMe:
   - legacy-flag (__tests__/__fixtures__/changelog/mixed-docs/legacy-flag.md)
⏭️ Skipped 1 page(s) in ReadMe due to no frontmatter data:
   - doc-sans-attributes (__tests__/__fixtures__/changelog/mixed-docs/doc-sans-attributes.md)
🚨 Received errors when attempting to upload 2 page(s):
   - __tests__/__fixtures__/changelog/mixed-docs/new-doc-slug.mdx: The ReadMe API responded with an unexpected error. Please try again and if this issue persists, get in touch with us at support@readme.io.
   - __tests__/__fixtures__/changelog/mixed-docs/simple-doc.md: The ReadMe API responded with an unexpected error. Please try again and if this issue persists, get in touch with us at support@readme.io.
",
}
`;

exports[`rdme changelog upload > given that the file path is a directory > should handle a mix of valid and invalid and autofixable files 1`] = `
{
  "result": {
    "created": [],
    "failed": [],
    "skipped": [
      {
        "filePath": "__tests__/__fixtures__/changelog/mixed-docs/doc-sans-attributes.md",
        "result": "skipped",
        "slug": "doc-sans-attributes",
      },
      {
        "filePath": "__tests__/__fixtures__/changelog/mixed-docs/invalid-attributes.md",
        "result": "skipped",
        "slug": "invalid-attributes",
      },
      {
        "filePath": "__tests__/__fixtures__/changelog/mixed-docs/legacy-flag.md",
        "result": "skipped",
        "slug": "legacy-flag",
      },
      {
        "filePath": "__tests__/__fixtures__/changelog/mixed-docs/new-doc-slug.mdx",
        "result": "skipped",
        "slug": "some-slug",
      },
      {
        "filePath": "__tests__/__fixtures__/changelog/mixed-docs/simple-doc.md",
        "result": "skipped",
        "slug": "simple-doc",
      },
    ],
    "updated": [],
  },
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
- 🔍 Looking for Markdown files in the \`__tests__/__fixtures__/changelog/mixed-docs\` directory...
✔ 🔍 Looking for Markdown files in the \`__tests__/__fixtures__/changelog/mixed-docs\` directory... 5 file(s) found!
- 🔬 Validating frontmatter data...
⚠ 🔬 Validating frontmatter data... issues found in 2 file(s).
 ›   Warning: 1 file(s) have issues that cannot be fixed automatically. 
 ›   Autofixable issues have been addressed but we also recommend addressing 
 ›   these issues as well. Please get in touch with us at support@readme.io if 
 ›   you need a hand.
",
  "stdout": "=== BEGIN writeFileSync to file: __tests__/__fixtures__/changelog/mixed-docs/doc-sans-attributes.md ===
Body

=== END writeFileSync to file: __tests__/__fixtures__/changelog/mixed-docs/doc-sans-attributes.md ===
=== BEGIN writeFileSync to file: __tests__/__fixtures__/changelog/mixed-docs/invalid-attributes.md ===
---
type: false
title: This is the changelog title
---

Body

=== END writeFileSync to file: __tests__/__fixtures__/changelog/mixed-docs/invalid-attributes.md ===
=== BEGIN writeFileSync to file: __tests__/__fixtures__/changelog/mixed-docs/legacy-flag.md ===
---
title: This is the changelog title
privacy:
  view: public
---

Body

=== END writeFileSync to file: __tests__/__fixtures__/changelog/mixed-docs/legacy-flag.md ===
=== BEGIN writeFileSync to file: __tests__/__fixtures__/changelog/mixed-docs/new-doc-slug.mdx ===
---
title: This is the changelog title
slug: some-slug
---

Body

=== END writeFileSync to file: __tests__/__fixtures__/changelog/mixed-docs/new-doc-slug.mdx ===
=== BEGIN writeFileSync to file: __tests__/__fixtures__/changelog/mixed-docs/simple-doc.md ===
---
title: This is the changelog title
---

Body

=== END writeFileSync to file: __tests__/__fixtures__/changelog/mixed-docs/simple-doc.md ===
✅ The following files have been automatically fixed:
- __tests__/__fixtures__/changelog/mixed-docs/legacy-flag.md (1 issue)

Please review the changes. Once everything looks good, run the command again to upload these files to ReadMe.
",
}
`;

exports[`rdme changelog upload > given that the file path is a directory > should handle complex frontmatter 1`] = `
{
  "result": {
    "created": [],
    "failed": [],
    "skipped": [],
    "updated": [
      {
        "filePath": "__tests__/__fixtures__/changelog/complex-frontmatter/basic.md",
        "response": {},
        "result": "updated",
        "slug": "basic",
      },
      {
        "filePath": "__tests__/__fixtures__/changelog/complex-frontmatter/complex.md",
        "response": {},
        "result": "updated",
        "slug": "complex",
      },
    ],
  },
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
- 🔍 Looking for Markdown files in the \`__tests__/__fixtures__/changelog/complex-frontmatter\` directory...
✔ 🔍 Looking for Markdown files in the \`__tests__/__fixtures__/changelog/complex-frontmatter\` directory... 2 file(s) found!
- 🔬 Validating frontmatter data...
✔ 🔬 Validating frontmatter data... no issues found!
- 🚀 Uploading files to ReadMe...
✔ 🚀 Uploading files to ReadMe... done!
",
  "stdout": "🔄 Successfully updated 2 page(s) in ReadMe:
   - basic (__tests__/__fixtures__/changelog/complex-frontmatter/basic.md)
   - complex (__tests__/__fixtures__/changelog/complex-frontmatter/complex.md)
",
}
`;

exports[`rdme changelog upload > given that the file path is a directory > should update existing pages in ReadMe for each file in the directory and its subdirectories 1`] = `
{
  "result": {
    "created": [],
    "failed": [],
    "skipped": [],
    "updated": [
      {
        "filePath": "__tests__/__fixtures__/changelog/existing-docs/simple-doc.md",
        "response": {},
        "result": "updated",
        "slug": "simple-doc",
      },
      {
        "filePath": "__tests__/__fixtures__/changelog/existing-docs/subdir/another-doc.md",
        "response": {},
        "result": "updated",
        "slug": "another-doc",
      },
    ],
  },
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
- 🔍 Looking for Markdown files in the \`__tests__/__fixtures__/changelog/existing-docs\` directory...
✔ 🔍 Looking for Markdown files in the \`__tests__/__fixtures__/changelog/existing-docs\` directory... 2 file(s) found!
- 🔬 Validating frontmatter data...
✔ 🔬 Validating frontmatter data... no issues found!
- 🚀 Uploading files to ReadMe...
✔ 🚀 Uploading files to ReadMe... done!
",
  "stdout": "🔄 Successfully updated 2 page(s) in ReadMe:
   - simple-doc (__tests__/__fixtures__/changelog/existing-docs/simple-doc.md)
   - another-doc (__tests__/__fixtures__/changelog/existing-docs/subdir/another-doc.md)
",
}
`;

exports[`rdme changelog upload > given that the file path is a single file > and the command is being run in a CI environment > should bypass prompt if \`--confirm-autofixes\` flag is passed 1`] = `
{
  "result": {
    "created": [],
    "failed": [],
    "skipped": [
      {
        "filePath": "__tests__/__fixtures__/changelog/legacy-docs/autofixable.md",
        "result": "skipped",
        "slug": "autofixable",
      },
    ],
    "updated": [],
  },
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
- 🔬 Validating frontmatter data...
⚠ 🔬 Validating frontmatter data... issues found in 1 file(s).
",
  "stdout": "Automatically fixing issues in 1 file(s)...
=== BEGIN writeFileSync to file: __tests__/__fixtures__/changelog/legacy-docs/autofixable.md ===
---
type: added
title: This is the changelog title
privacy:
  view: anyone_with_link
---

Body

=== END writeFileSync to file: __tests__/__fixtures__/changelog/legacy-docs/autofixable.md ===
✅ The following files have been automatically fixed:
- __tests__/__fixtures__/changelog/legacy-docs/autofixable.md (1 issue)

Please review the changes. Once everything looks good, run the command again to upload these files to ReadMe.
",
}
`;

exports[`rdme changelog upload > given that the file path is a single file > and the command is being run in a CI environment > should create a page in ReadMe and include \`x-readme-source-url\` source header 1`] = `
{
  "result": {
    "created": [
      {
        "filePath": "__tests__/__fixtures__/changelog/new-docs/new-doc.md",
        "response": {},
        "result": "created",
        "slug": "new-doc",
      },
    ],
    "failed": [],
    "skipped": [],
    "updated": [],
  },
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
- 🔬 Validating frontmatter data...
✔ 🔬 Validating frontmatter data... no issues found!
- 🚀 Uploading files to ReadMe...
✔ 🚀 Uploading files to ReadMe... done!
",
  "stdout": "🌱 Successfully created 1 page(s) in ReadMe:
   - new-doc (__tests__/__fixtures__/changelog/new-docs/new-doc.md)
",
}
`;

exports[`rdme changelog upload > given that the file path is a single file > and the command is being run in a CI environment > should error out if the file has validation errors 1`] = `
{
  "error": [Error: 1 file(s) have issues that should be fixed before uploading to ReadMe. Please run \`rdme changelog upload __tests__/__fixtures__/changelog/legacy-docs/autofixable.md --dry-run\` in a non-CI environment to fix them.],
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
- 🔬 Validating frontmatter data...
⚠ 🔬 Validating frontmatter data... issues found in 1 file(s).
",
  "stdout": "",
}
`;

exports[`rdme changelog upload > given that the file path is a single file > given that the --dry-run flag is passed > should error out if a non-404 error is returned from the GET request (with a json body) 1`] = `
{
  "error": [APIv2Error: ReadMe API error: bad request

something went so so wrong],
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
- 🔬 Validating frontmatter data...
✔ 🔬 Validating frontmatter data... no issues found!
- 🎭 Uploading files to ReadMe (but not really because it's a dry run)...
✖ 🎭 Uploading files to ReadMe (but not really because it's a dry run)... 1 file(s) failed.
",
  "stdout": "🚨 Unable to fetch data about the following 1 page(s):
   - __tests__/__fixtures__/changelog/slug-docs/new-doc-slug.md: bad request
",
}
`;

exports[`rdme changelog upload > given that the file path is a single file > given that the --dry-run flag is passed > should error out if a non-404 error is returned from the GET request 1`] = `
{
  "error": [Error: The ReadMe API responded with an unexpected error. Please try again and if this issue persists, get in touch with us at support@readme.io.],
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
- 🔬 Validating frontmatter data...
✔ 🔬 Validating frontmatter data... no issues found!
- 🎭 Uploading files to ReadMe (but not really because it's a dry run)...
✖ 🎭 Uploading files to ReadMe (but not really because it's a dry run)... 1 file(s) failed.
",
  "stdout": "🚨 Unable to fetch data about the following 1 page(s):
   - __tests__/__fixtures__/changelog/slug-docs/new-doc-slug.md: The ReadMe API responded with an unexpected error. Please try again and if this issue persists, get in touch with us at support@readme.io.
",
}
`;

exports[`rdme changelog upload > given that the file path is a single file > given that the --dry-run flag is passed > should not create anything in ReadMe 1`] = `
{
  "result": {
    "created": [
      {
        "filePath": "__tests__/__fixtures__/changelog/new-docs/new-doc.md",
        "response": null,
        "result": "created",
        "slug": "new-doc",
      },
    ],
    "failed": [],
    "skipped": [],
    "updated": [],
  },
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
- 🔬 Validating frontmatter data...
✔ 🔬 Validating frontmatter data... no issues found!
- 🎭 Uploading files to ReadMe (but not really because it's a dry run)...
✔ 🎭 Uploading files to ReadMe (but not really because it's a dry run)... done!
",
  "stdout": "🌱 The following 1 page(s) do not currently exist in ReadMe and will be created:
   - new-doc (__tests__/__fixtures__/changelog/new-docs/new-doc.md)
",
}
`;

exports[`rdme changelog upload > given that the file path is a single file > given that the --dry-run flag is passed > should not update anything in ReadMe 1`] = `
{
  "result": {
    "created": [],
    "failed": [],
    "skipped": [],
    "updated": [
      {
        "filePath": "__tests__/__fixtures__/changelog/slug-docs/new-doc-slug.md",
        "response": null,
        "result": "updated",
        "slug": "some-slug",
      },
    ],
  },
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
- 🔬 Validating frontmatter data...
✔ 🔬 Validating frontmatter data... no issues found!
- 🎭 Uploading files to ReadMe (but not really because it's a dry run)...
✔ 🎭 Uploading files to ReadMe (but not really because it's a dry run)... done!
",
  "stdout": "🔄 The following 1 page(s) already exist in ReadMe and will be updated:
   - some-slug (__tests__/__fixtures__/changelog/slug-docs/new-doc-slug.md)
",
}
`;

exports[`rdme changelog upload > given that the file path is a single file > given that the file has frontmatter issues > should exit if the user declines to fix the issues 1`] = `
{
  "error": [Error: Aborting upload due to user input.],
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
- 🔬 Validating frontmatter data...
⚠ 🔬 Validating frontmatter data... issues found in 1 file(s).
",
  "stdout": "",
}
`;

exports[`rdme changelog upload > given that the file path is a single file > given that the file has frontmatter issues > should fix the frontmatter issues in the file 1`] = `
{
  "result": {
    "created": [],
    "failed": [],
    "skipped": [
      {
        "filePath": "__tests__/__fixtures__/changelog/legacy-docs/autofixable.md",
        "result": "skipped",
        "slug": "autofixable",
      },
    ],
    "updated": [],
  },
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
- 🔬 Validating frontmatter data...
⚠ 🔬 Validating frontmatter data... issues found in 1 file(s).
",
  "stdout": "=== BEGIN writeFileSync to file: __tests__/__fixtures__/changelog/legacy-docs/autofixable.md ===
---
type: added
title: This is the changelog title
privacy:
  view: anyone_with_link
---

Body

=== END writeFileSync to file: __tests__/__fixtures__/changelog/legacy-docs/autofixable.md ===
✅ The following files have been automatically fixed:
- __tests__/__fixtures__/changelog/legacy-docs/autofixable.md (1 issue)

Please review the changes. Once everything looks good, run the command again to upload these files to ReadMe.
",
}
`;

exports[`rdme changelog upload > given that the file path is a single file > given that the file has frontmatter issues > should skip client-side validation if the --skip-validation flag is passed 1`] = `
{
  "error": [APIv2Error: ReadMe API error: bad request

your hidden flag is whack],
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
 ›   Warning: Skipping pre-upload validation of the Markdown file(s). This is 
 ›   not recommended.
- 🚀 Uploading files to ReadMe...
✖ 🚀 Uploading files to ReadMe... 1 file(s) failed.
",
  "stdout": "🚨 Received errors when attempting to upload 1 page(s):
   - __tests__/__fixtures__/changelog/legacy-docs/autofixable.md: bad request
",
}
`;

exports[`rdme changelog upload > given that the file path is a single file > given that the file has frontmatter issues > should warn user if the file has no autofixable issues 1`] = `
{
  "result": {
    "created": [
      {
        "filePath": "__tests__/__fixtures__/changelog/legacy-docs/unfixable.md",
        "response": {},
        "result": "created",
        "slug": "unfixable",
      },
    ],
    "failed": [],
    "skipped": [],
    "updated": [],
  },
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
- 🔬 Validating frontmatter data...
⚠ 🔬 Validating frontmatter data... issues found in 1 file(s).
 ›   Warning: 1 file(s) have issues that cannot be fixed automatically. The 
 ›   upload will proceed but we recommend addressing these issues. Please get 
 ›   in touch with us at support@readme.io if you need a hand.
- 🚀 Uploading files to ReadMe...
✔ 🚀 Uploading files to ReadMe... done!
",
  "stdout": "🌱 Successfully created 1 page(s) in ReadMe:
   - unfixable (__tests__/__fixtures__/changelog/legacy-docs/unfixable.md)
",
}
`;

exports[`rdme changelog upload > given that the file path is a single file > given that the slug is passed in the frontmatter > should use that slug to create a page in ReadMe 1`] = `
{
  "result": {
    "created": [
      {
        "filePath": "__tests__/__fixtures__/changelog/slug-docs/new-doc-slug.md",
        "response": {},
        "result": "created",
        "slug": "some-slug",
      },
    ],
    "failed": [],
    "skipped": [],
    "updated": [],
  },
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
- 🔬 Validating frontmatter data...
✔ 🔬 Validating frontmatter data... no issues found!
- 🚀 Uploading files to ReadMe...
✔ 🚀 Uploading files to ReadMe... done!
",
  "stdout": "🌱 Successfully created 1 page(s) in ReadMe:
   - some-slug (__tests__/__fixtures__/changelog/slug-docs/new-doc-slug.md)
",
}
`;

exports[`rdme changelog upload > given that the file path is a single file > given that the slug is passed in the frontmatter > should use that slug update an existing page in ReadMe 1`] = `
{
  "result": {
    "created": [],
    "failed": [],
    "skipped": [],
    "updated": [
      {
        "filePath": "__tests__/__fixtures__/changelog/slug-docs/new-doc-slug.md",
        "response": {},
        "result": "updated",
        "slug": "some-slug",
      },
    ],
  },
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
- 🔬 Validating frontmatter data...
✔ 🔬 Validating frontmatter data... no issues found!
- 🚀 Uploading files to ReadMe...
✔ 🚀 Uploading files to ReadMe... done!
",
  "stdout": "🔄 Successfully updated 1 page(s) in ReadMe:
   - some-slug (__tests__/__fixtures__/changelog/slug-docs/new-doc-slug.md)
",
}
`;

exports[`rdme changelog upload > given that the file path is a single file > should create a page in ReadMe 1`] = `
{
  "result": {
    "created": [
      {
        "filePath": "__tests__/__fixtures__/changelog/new-docs/new-doc.md",
        "response": {},
        "result": "created",
        "slug": "new-doc",
      },
    ],
    "failed": [],
    "skipped": [],
    "updated": [],
  },
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
- 🔬 Validating frontmatter data...
✔ 🔬 Validating frontmatter data... no issues found!
- 🚀 Uploading files to ReadMe...
✔ 🚀 Uploading files to ReadMe... done!
",
  "stdout": "🌱 Successfully created 1 page(s) in ReadMe:
   - new-doc (__tests__/__fixtures__/changelog/new-docs/new-doc.md)
",
}
`;

exports[`rdme changelog upload > given that the file path is a single file > should error out if a non-404 error is returned from the GET request (with a json body) 1`] = `
{
  "error": [APIv2Error: ReadMe API error: bad request

something went so so wrong],
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
- 🔬 Validating frontmatter data...
✔ 🔬 Validating frontmatter data... no issues found!
- 🚀 Uploading files to ReadMe...
✖ 🚀 Uploading files to ReadMe... 1 file(s) failed.
",
  "stdout": "🚨 Received errors when attempting to upload 1 page(s):
   - __tests__/__fixtures__/changelog/new-docs/new-doc.md: bad request
",
}
`;

exports[`rdme changelog upload > given that the file path is a single file > should error out if a non-404 error is returned from the GET request 1`] = `
{
  "error": [Error: The ReadMe API responded with an unexpected error. Please try again and if this issue persists, get in touch with us at support@readme.io.],
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
- 🔬 Validating frontmatter data...
✔ 🔬 Validating frontmatter data... no issues found!
- 🚀 Uploading files to ReadMe...
✖ 🚀 Uploading files to ReadMe... 1 file(s) failed.
",
  "stdout": "🚨 Received errors when attempting to upload 1 page(s):
   - __tests__/__fixtures__/changelog/new-docs/new-doc.md: The ReadMe API responded with an unexpected error. Please try again and if this issue persists, get in touch with us at support@readme.io.
",
}
`;

exports[`rdme changelog upload > given that the file path is a single file > should error out if the file does not exist 1`] = `
{
  "error": [Error: Oops! We couldn't locate a file or directory at the path you provided.],
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
",
  "stdout": "",
}
`;

exports[`rdme changelog upload > given that the file path is a single file > should error out if the file has an invalid file extension 1`] = `
{
  "error": [Error: Invalid file extension (.json). Must be one of the following: .markdown, .md, .mdx],
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
",
  "stdout": "",
}
`;

exports[`rdme changelog upload > given that the file path is a single file > should hide the warning if the \`--hide-experimental-warning\` flag is passed 1`] = `
{
  "result": {
    "created": [
      {
        "filePath": "__tests__/__fixtures__/changelog/new-docs/new-doc.md",
        "response": {},
        "result": "created",
        "slug": "new-doc",
      },
    ],
    "failed": [],
    "skipped": [],
    "updated": [],
  },
  "stderr": "- 🔬 Validating frontmatter data...
✔ 🔬 Validating frontmatter data... no issues found!
- 🚀 Uploading files to ReadMe...
✔ 🚀 Uploading files to ReadMe... done!
",
  "stdout": "🌱 Successfully created 1 page(s) in ReadMe:
   - new-doc (__tests__/__fixtures__/changelog/new-docs/new-doc.md)
",
}
`;

exports[`rdme changelog upload > given that the file path is a single file > should not throw an error if \`max-errors\` flag is set to -1 1`] = `
{
  "result": {
    "created": [],
    "failed": [
      {
        "error": [APIv2Error: ReadMe API error: bad request

something went so so wrong],
        "filePath": "__tests__/__fixtures__/changelog/new-docs/new-doc.md",
        "result": "failed",
        "slug": "new-doc",
      },
    ],
    "skipped": [],
    "updated": [],
  },
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
- 🔬 Validating frontmatter data...
✔ 🔬 Validating frontmatter data... no issues found!
- 🚀 Uploading files to ReadMe...
✖ 🚀 Uploading files to ReadMe... 1 file(s) failed.
",
  "stdout": "🚨 Received errors when attempting to upload 1 page(s):
   - __tests__/__fixtures__/changelog/new-docs/new-doc.md: bad request
",
}
`;
